fix gap between accordion end and content_grid4 (with name, surname and telephone)

--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ a:active {
 /* Accordion */
 /* Basic rules */
 .accordion {
-	display: inline-block;
 	margin: 0;
 	padding: 0;
 }
